# GoPxL_SDK_Python

./: .gitignore  LICENSE  README.md  pyproject.toml
GoPxL_SDK_Py/: classic_discovery.py  dataset.py  def_.py  gdp_msg.py  kserializer.py  response.py
gopxl/: __init__.py  discovery.py  enums.py  exceptions.py  gdp_client.py  instance.py  request.py  resource.py  resource_manager.py  rest_client.py  system.py  transaction.py
